--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-SystemRequirements: Java JDK 8 or higher
+SystemRequirements: Java JDK 8 or higher, Python
 Imports: 
     reticulate,
     R.utils,
