--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -72,28 +72,7 @@ jobs:
           while read -r cmd
           do
             eval sudo $cmd
-          done < <(Rscript -e 'writeLines(remotes::system_requirements("ubuntu", "16.04"))')
-
-      - name: "Setup Python"
-        uses: conda-incubator/setup-miniconda@v1.7.0
-        with:
-          auto-update-conda: true
-          python-version: '3.7'
-          activate-environment: r-reticulate
-
-
-      - name: "Conda path"
-        run: |
-          echo "/usr/local/miniconda/condabin" >> $GITHUB_PATH || true ;
-          echo "/usr/local/miniconda/condabin" >> $PATH  || true ;
-          conda activate r-reticulate || true ;
-
-
-      - name: "Conda info"
-        shell: bash -l {0}      
-        run: |
-          conda info
-          conda list         
+          done < <(Rscript -e 'writeLines(remotes::system_requirements("ubuntu", "16.04"))')      
        
 
       - name: Install dependencies
@@ -101,6 +80,13 @@ jobs:
           remotes::install_deps(dependencies = TRUE)
           remotes::install_cran("rcmdcheck")
         shell: Rscript {0}
+
+      - name: Install python dependencies
+        run: |
+          reticulate::install_miniconda()
+          x = readLines("requirements.txt")
+          reticulate::py_install(x)
+        shell: Rscript {0}        
 
       - name: Session info
         run: |
