--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -88,7 +88,9 @@ jobs:
           if (check) reticulate::install_miniconda()
           if (check) x = readLines("requirements.txt")
           if (check) reticulate::py_install(x)
+        continue-on-error: true          
         shell: Rscript {0}        
+
 
       - name: Session info
         run: |
