--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -87,7 +87,7 @@ jobs:
           if (!requireNamespace("reticulate")  & check) install.packages("reticulate")
           if (check) reticulate::install_miniconda()
           if (check) x = readLines("requirements.txt")
-          if (check) reticulate::py_install(x)
+          if (check) reticulate::py_install(x, method = "conda")
         continue-on-error: true          
         shell: Rscript {0}        
 
