--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,6 +18,7 @@ environment:
     _R_CHECK_FORCE_SUGGESTS_: 0
     PYTHON_VERSION: 3.6
     MINICONDA: C:\Miniconda3-x64
+    RETICULATE_PYTHON: C:\Miniconda3-x64\python.exe
   # env vars that may need to be set, at least temporarily, from time to time
   # see https://github.com/krlmlr/r-appveyor#readme for details
   # USE_RTOOLS: true
@@ -27,6 +28,7 @@ environment:
 install:
   - ps: Bootstrap
   - "set PATH=%MINICONDA%;%MINICONDA%\\Scripts;%PATH%"
+  - 
   - conda config --set always_yes yes --set changeps1 no
   - if exist "requirements.txt" conda update -q conda
   - if exist "requirements.txt" conda info -a
