--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -83,10 +83,10 @@ jobs:
       - name: Install python dependencies
         run: |
           check = file.exists("requirements.txt")
-          if (!requireNamespace("reticulate") & check) install.packages("reticulate")
+          if (!requireNamespace("reticulate") & check) remotes::install_cran("reticulate")
           if (check) reticulate::install_miniconda()
           if (check) x = readLines("requirements.txt")
-          if (check) reticulate::py_install(x, method = "conda")
+          if (check) reticulate::py_install(x, method = "conda", channel = c("conda-forge", "defaults", "bioconda"))
         continue-on-error: true          
         shell: Rscript {0}        
 
